[package]
name = "live-backend"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-actors = "4.1"
actix = "0.13"
actix-files = "0.6"

env_logger = "0.9"
log = "0.4"
rand = "0.8"
serde = "1"
serde_json = "1"
uuid = {version = "1.1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }