[package]
name = "live-backend"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-actors = "4.1"
actix = "0.13"
actix-files = "0.6"
actix-rt = "2.7.0"
actix-broker = "*"

env_logger = "0.9"
log = "0.4"
rand = "0.8"
common_macros = "0.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = {version = "1.1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "postgres", "uuid" ] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
bytestring = "1.1.0"
